--- a/IssueTracker/IssueTracker/Presenter/Supports/Base.lproj/Main.storyboard
+++ b/IssueTracker/IssueTracker/Presenter/Supports/Base.lproj/Main.storyboard
@@ -15,18 +15,121 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7s4-Vv-bDk">
+                                <rect key="frame" x="0.0" y="209" width="390" height="130"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5n4-JK-aaU">
+                                        <rect key="frame" x="20" y="64.666666666666686" width="350" height="1"/>
+                                        <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="Ltf-81-Jbn"/>
+                                        </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.zPosition">
+                                                <integer key="value" value="1"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9H-mc-xPP">
+                                        <rect key="frame" x="0.0" y="0.0" width="390" height="65"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아이디" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rxt-Xu-AdJ">
+                                                <rect key="frame" x="25" y="15" width="92" height="35"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R8z-1A-1ex">
+                                                <rect key="frame" x="132" y="15.666666666666657" width="233" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="Rxt-Xu-AdJ" firstAttribute="height" secondItem="f9H-mc-xPP" secondAttribute="height" multiplier="0.538462" id="29G-YQ-75p"/>
+                                            <constraint firstAttribute="trailing" secondItem="R8z-1A-1ex" secondAttribute="trailing" constant="25" id="FX6-qW-eiC"/>
+                                            <constraint firstItem="Rxt-Xu-AdJ" firstAttribute="leading" secondItem="f9H-mc-xPP" secondAttribute="leading" constant="25" id="Gw1-Sp-wlm"/>
+                                            <constraint firstItem="Rxt-Xu-AdJ" firstAttribute="width" secondItem="f9H-mc-xPP" secondAttribute="width" multiplier="0.235897" id="Sk2-F9-JKG"/>
+                                            <constraint firstItem="R8z-1A-1ex" firstAttribute="height" secondItem="f9H-mc-xPP" secondAttribute="height" multiplier="0.523077" id="iDh-pL-nKB"/>
+                                            <constraint firstItem="R8z-1A-1ex" firstAttribute="centerY" secondItem="f9H-mc-xPP" secondAttribute="centerY" id="pwK-vu-V2j"/>
+                                            <constraint firstItem="R8z-1A-1ex" firstAttribute="leading" secondItem="Rxt-Xu-AdJ" secondAttribute="trailing" priority="750" constant="15" id="wiN-tS-UYQ"/>
+                                            <constraint firstItem="Rxt-Xu-AdJ" firstAttribute="centerY" secondItem="f9H-mc-xPP" secondAttribute="centerY" id="yZk-5w-0I0"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hom-p2-TGa">
+                                        <rect key="frame" x="0.0" y="65" width="390" height="65"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IDa-Fo-t1I">
+                                                <rect key="frame" x="25" y="15" width="92" height="35"/>
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jXq-7E-wjQ">
+                                                <rect key="frame" x="132" y="15.666666666666686" width="233" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="jXq-7E-wjQ" firstAttribute="leading" secondItem="IDa-Fo-t1I" secondAttribute="trailing" priority="750" constant="15" id="EC4-7m-X5h"/>
+                                            <constraint firstItem="IDa-Fo-t1I" firstAttribute="leading" secondItem="Hom-p2-TGa" secondAttribute="leading" constant="25" id="EOw-IG-gKz"/>
+                                            <constraint firstItem="IDa-Fo-t1I" firstAttribute="centerY" secondItem="Hom-p2-TGa" secondAttribute="centerY" id="JWI-4q-WPq"/>
+                                            <constraint firstItem="jXq-7E-wjQ" firstAttribute="centerY" secondItem="Hom-p2-TGa" secondAttribute="centerY" id="VJj-Up-SyD"/>
+                                            <constraint firstAttribute="trailing" secondItem="jXq-7E-wjQ" secondAttribute="trailing" constant="25" id="We5-a6-4fx"/>
+                                            <constraint firstItem="jXq-7E-wjQ" firstAttribute="height" secondItem="Hom-p2-TGa" secondAttribute="height" multiplier="0.523077" id="njB-UW-NZ7"/>
+                                            <constraint firstItem="IDa-Fo-t1I" firstAttribute="height" secondItem="Hom-p2-TGa" secondAttribute="height" multiplier="0.538462" id="tdl-8K-rQn"/>
+                                            <constraint firstItem="IDa-Fo-t1I" firstAttribute="width" secondItem="Hom-p2-TGa" secondAttribute="width" multiplier="0.235897" id="ux6-GD-RJQ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="5n4-JK-aaU" firstAttribute="centerY" secondItem="7s4-Vv-bDk" secondAttribute="centerY" id="1dN-4o-FU5"/>
+                                    <constraint firstItem="R8z-1A-1ex" firstAttribute="width" secondItem="5n4-JK-aaU" secondAttribute="width" multiplier="0.665714" id="5xr-VS-2RC"/>
+                                    <constraint firstAttribute="trailing" secondItem="f9H-mc-xPP" secondAttribute="trailing" id="7c0-7y-ybs"/>
+                                    <constraint firstItem="5n4-JK-aaU" firstAttribute="centerX" secondItem="Hom-p2-TGa" secondAttribute="centerX" id="AHs-ua-VD1"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hom-p2-TGa" secondAttribute="bottom" id="ANw-vh-s2W"/>
+                                    <constraint firstAttribute="trailing" secondItem="5n4-JK-aaU" secondAttribute="trailing" priority="750" constant="20" symbolic="YES" id="Na9-tG-nu6"/>
+                                    <constraint firstItem="f9H-mc-xPP" firstAttribute="height" secondItem="7s4-Vv-bDk" secondAttribute="height" multiplier="0.5" id="Op4-Ni-9tY"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hom-p2-TGa" secondAttribute="trailing" id="amq-4i-kxR"/>
+                                    <constraint firstItem="Hom-p2-TGa" firstAttribute="height" secondItem="7s4-Vv-bDk" secondAttribute="height" multiplier="0.5" id="iGC-bM-e8g"/>
+                                    <constraint firstItem="5n4-JK-aaU" firstAttribute="leading" secondItem="7s4-Vv-bDk" secondAttribute="leading" priority="750" constant="20" symbolic="YES" id="j3b-7Y-mUj"/>
+                                    <constraint firstItem="5n4-JK-aaU" firstAttribute="width" secondItem="7s4-Vv-bDk" secondAttribute="width" multiplier="0.897436" id="kUS-g2-Eef"/>
+                                    <constraint firstItem="f9H-mc-xPP" firstAttribute="top" secondItem="7s4-Vv-bDk" secondAttribute="top" id="oRG-bJ-MdS"/>
+                                    <constraint firstItem="Hom-p2-TGa" firstAttribute="leading" secondItem="7s4-Vv-bDk" secondAttribute="leading" id="oeL-nt-zh8"/>
+                                    <constraint firstItem="jXq-7E-wjQ" firstAttribute="width" secondItem="5n4-JK-aaU" secondAttribute="width" multiplier="0.665714" id="uFh-ha-qse"/>
+                                    <constraint firstItem="f9H-mc-xPP" firstAttribute="leading" secondItem="7s4-Vv-bDk" secondAttribute="leading" id="uyx-IG-R1t"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <constraints>
+                            <constraint firstItem="7s4-Vv-bDk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="EPF-ki-GrR"/>
+                            <constraint firstItem="7s4-Vv-bDk" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.154028" id="R5Q-aN-ruZ"/>
+                            <constraint firstItem="7s4-Vv-bDk" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="bsc-cZ-2JI"/>
+                            <constraint firstItem="7s4-Vv-bDk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="165" id="gSo-b2-xAm"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="17" y="89"/>
+            <point key="canvasLocation" x="16.923076923076923" y="88.862559241706151"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray3Color">
+            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
